--- a/preamble.tex
+++ b/preamble.tex
@@ -10,6 +10,7 @@
 \usepackage[makeroom]{cancel}
 \usepackage{mathtools}
 \usepackage{bookmark}
+\usepackage{esint}
 \usepackage{enumitem}
 \usepackage{hyperref,theoremref}
 \hypersetup{
