Orientation on curves and surfaces

--- a/extra_theory.tex
+++ b/extra_theory.tex
@@ -65,5 +65,12 @@
 	Mer info: \href{https://en.wikipedia.org/wiki/Vector_calculus_identities}{[1]}
 }
 
+\dfn{Orientering på randkurvor och randytor}
+{
+	En rand\textbf{yta} sägs vara \textbf{positiv} orienterad om randytans normal pekar ifrån själva kroppen som randytan täcker. Tvärtom med negativ orientering på randyta.\\\\
+	
+	En rand\textbf{kurva} sägs vara \textbf{positiv} orienterad om ytan som randkurvan täcker är åt vänstra sidan när man följer orienteringen på kurvan. Tvärtom med negativ orientering på randkurvan.
+}
+
 
 \end{document}
