--- a/extra_theory.tex
+++ b/extra_theory.tex
@@ -115,7 +115,7 @@ Observera att differentierbarhet inte är samma sak som deriverbar! Differentier
 
 \dfn{Divergenssatsen (Gauss sats) med alla villkor}
 {
-	Låt $D$ vara en sluten och begränsad (kompakt) mängd i $\mathbb{R}^3$, där randytan $S$ är stängd och positivt orienterad (normalen pekar ut från $D$) med enhetsnormalfältet $\hat{N}$. Låt också vektorfältet $F$ vara $C^1$ i hela $D$, då gäller följande:
+	Låt $D$ vara en sluten och begränsad (kompakt) mängd i $\mathbb{R}^3$, där randytan $S$ är stängd och positivt orienterad (normalen pekar ut från $D$), samt styckvis glatt med enhetsnormalfältet $\hat{N}$. Låt också vektorfältet $F$ vara $C^1$ i hela $D$, då gäller följande:
 	\begin{equation*}
 		\iiint_D \nabla \cdot F dV = \oiint_S F \cdot \hat{N} dS
 	\end{equation*}
